Add: 2.6 模块开发 - 标签管理.
