# chapter-2-blog-service/internal/routers/api/v1/tag.go
@@ -4,7 +4,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"go-programming-tour-book-exercise/chapter-2-blog-service/global"
 	"go-programming-tour-book-exercise/chapter-2-blog-service/internal/service"
+	"go-programming-tour-book-exercise/chapter-2-blog-service/internal/service/validate"
 	"go-programming-tour-book-exercise/chapter-2-blog-service/pkg/app"
+	"go-programming-tour-book-exercise/chapter-2-blog-service/pkg/convert"
 	"go-programming-tour-book-exercise/chapter-2-blog-service/pkg/errcode"
 	"log"
 )
@@ -18,15 +20,29 @@ func NewTag() Tag {
 
 // @Summary 新增标签
 // @Produce  json
-// @Param name body string true "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param created_by body string true "创建者" minlength(3) maxlength(100)
+// @Param CreateTagRequest body validate.CreateTagRequest true "CreateTagRequest"
 // @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {
+	param := validate.CreateTagRequest{}
+	svc := service.New(c)
+	response := app.NewResponse(c)
+	valid, errors := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("Create app.BindAndValid err: %v", errors)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errors.Errors()...))
+		return
+	}
 
+	if err := svc.CreateTag(&param); err != nil {
+		global.Logger.Errorf("svc.CreateTag err: %v", err)
+		response.ToErrorResponse(errcode.ErrorCreateTagFail)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
 }
 
 // @Summary 删除标签
@@ -37,21 +53,58 @@ func (t Tag) Create(c *gin.Context) {
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {
+	param := validate.DeleteTagRequest{
+		ID: convert.StrTo(c.Param("id")).MustUInt32(),
+	}
+	response := app.NewResponse(c)
+	svc := service.New(c)
 
+	valid, errors := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("Delete app.BindAndValid errors: %v", errors)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errors.Errors()...))
+		return
+	}
+
+	if err := svc.DeleteTag(&param); err != nil {
+		global.Logger.Errorf("svc.DeleteTag err: %v", err)
+		response.ToErrorResponse(errcode.ErrorDeleteTagFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
 }
 
 // @Summary 更新标签
 // @Produce  json
-// @Param id path int true "标签 ID"
-// @Param name body string false "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param modified_by body string true "修改者" minlength(3) maxlength(100)
+// @Param UpdateTagRequest body validate.UpdateTagRequest true "UpdateTagRequest"
 // @Success 200 {array} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {
+	param := validate.UpdateTagRequest{}
+	response := app.NewResponse(c)
+	svc := service.New(c)
 
+	// valid the request params.
+	valid, errors := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("Update app.BindAndValid err: %v", errors)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errors.Errors()...))
+		return
+	}
+
+	// svc update logic.
+	if err := svc.UpdateTag(&param); err != nil {
+		global.Logger.Errorf("svc.UpdateTag err: %v", err)
+		response.ToErrorResponse(errcode.ErrorUpdateTagFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
 }
 
 // @Summary 获取多个标签
@@ -66,18 +119,40 @@ func (t Tag) Update(c *gin.Context) {
 // @Router /api/v1/tags [get]
 func (t Tag) List(c *gin.Context) {
 	log.Println("tag list...")
-
+	param := validate.ListTagRequest{}
 	response := app.NewResponse(c)
 
 	// valid the request params.
-	valid, errs := app.BindAndValid(c, &service.ListTagRequest{})
+	valid, errors := app.BindAndValid(c, &param)
 	// return (bool, ValidErrors), you also can design only return ValidErrors, then if ValidErrors != nil {...}
 	if !valid {
-		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
-		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		global.Logger.Errorf("app.BindAndValid errors: %v", errors)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errors.Errors()...))
 		return
 	}
 
-	response.ToResponse(gin.H{})
+	svc := service.New(c)
+	totalRows, err := svc.CountTag(&validate.CountTagRequest{Name: param.Name, State: param.State})
+	if err != nil {
+		global.Logger.Errorf("svc.CountTag err: %v", err)
+		response.ToErrorResponse(errcode.ErrorCountTagFail)
+		return
+	}
+
+	pager := app.Pager{
+		Page:      app.GetPage(c),
+		PageSize:  app.GetPageSize(c),
+		TotalRows: totalRows,
+	}
+	tags, err := svc.GetTagList(&param, &pager)
+	if err != nil {
+		// 1. err -> log
+		global.Logger.Errorf("svc.GetTagList err: %v", err)
+		// 2. err -> response
+		response.ToErrorResponse(errcode.ErrorGetTagListFail)
+		return
+	}
+
+	response.ToResponseList(tags, totalRows)
 	return
 }
